<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/merge_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#5F4B8B"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/detail_tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="D-Day 설정"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textColor="#5F4B8B"
        />

    <!-- 날짜 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_detail"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </android.support.design.widget.TextInputLayout>

    //음력 기능
   <!-- <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/detail_checkbox_add_umryuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_add_umryuk"
        android:layout_margin="10dp"/>-->

    <!-- 제목 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_til_title"
        android:layout_marginBottom="10dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title_detail" />
    </android.support.design.widget.TextInputLayout>

    <!-- 내용 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description_detail" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/detail_checkbox_add_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_add_noti"
        android:layout_margin="10dp"/>


    <!-- Footer aligned to bottom -->
    ㅇ<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?actionBarSize">

       <!-- <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/merge_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_id" />-->

    </RelativeLayout>

</LinearLayout>